# FerroDispCalc

./: .buildinfo  .gitignore  1.sh  CMakeLists.txt  README.md  genindex.html  index.html  install.sh  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  测试.md
.doctrees/: environment.pickle  index.doctree
.doctrees/getting-started/: index.doctree  install.doctree  quick_start.doctree
.github/workflow/: docs.yml
.github/workflows/: docs.yml
_sources/getting-started/: index.rst  install.md
docs/: conf.py  index.rst
docs/source/: build_neighbor_list.rst  build_neighbor_list_new.rst  conf.py  disp_ploter.rst  index.rst  modules.rst  type_map.rst
docs/source/getting-started/: index.rst  install.rst  quick_start.md  quick_start.rst
ferrodispcalc/: 1.vasp  PolarDisp.py  PolarPolter.py  TypeMap.py  __init__.py  build_neighbor_list.py  compute.py  disp_ploter.py  io.py  plot.py  ploter.py  test.py  type_map.py
ferrodispcalc/compute/: _compute.py  backend.py  compute.py  cppbackend.py  pybackend.py
ferrodispcalc/io/: lammps.py
ferrodispcalc/old/: old_plot_each_frame_polar.py  plot.py  plotBdispXY_MXS_code.py  polar.py
ferrodispcalc/ploter/: __init__.py  vector_polter.py
ferrodispcalc/plotter/: __init__.py  multiframe_plotter.py  scalar_poltter.py  vector_poltter.py
getting-started/: index.html  install.html  quick_start.html
src/: basic.cpp  basic.hpp  binding.cpp  get_averaged_structure.cpp  get_averaged_structure.hpp  get_displacement.cpp  get_displacement.hpp  get_local_lattice.cpp  get_polarization.cpp  get_polarization_displacement.cpp  make.sh
src/cpp/: get_polarization.hpp
src/ferrodispcalc/: basic.hpp  binding.cpp  get_averaged_structure.cpp  get_averaged_structure.hpp  get_displacement.cpp  get_displacement.hpp  get_polarization.cpp  type_map.py
src/ferrodispcalc/compute/: pybackend.py
src/ferrodispcalc/io/: core.py
src/ferrodispcalc/plotter/: __init__.py  _vector_poltter.py
src/lmp/: CMakeLists.txt  LAMMPSInterfaceCXX.cmake  Makefile  Makefile.common  compute_custom_disp.cpp  compute_custom_disp.h  compute_disp_atom.cpp  compute_disp_atom.h  compute_polar_atom.cpp  compute_polar_atom.h  dispplugin.cpp
src/original/: basic.hpp  get_local_lattice.cpp  get_polarization_displacement.cpp
test/: README.md  com_sys.py  compare.py  run_test.sh
test/BTO/: 1.lammpstrj  parameter.py
test/BaTiO3/: avg-dump.py  conf.lmp  ref.xsf  test.sh
test/BaTiO3-oxygen-vacancy/: conf.lmp
test/PIN-PMN-PT/: 1.lammpstrj  build_neighbor.py  parameter.py  parameter_e33.py  ref.disp  ref.polar  test.sh  traj.lammpstrj
test/PIN-PMN-PT_multi_domain/: Main.py  README.md  bec_file  build_neighbor.py  parameter_e33.py  ref.disp  ref.polar  traj.lammpstrj
test/PSZO/: 1.lammpstrj  Main.py  README.md  bec_file  build_neighbor.py  neighbor.py  parameter.py  ref.disp  ref.polar  test.sh  type_map_file
test/PZO/: bec_file  build_neighbor.py  ref.disp  ref.polar  traj.lammpstrj
test/PbTiO3-grain-boundary/: PTO-P4mm210_GB_supercell.cif
