[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferrodispcalc"
version = "0.1.0"
description = "FerroDispCalc (FDC) is a pre and post-processing tool for simulation of ferroelectrics"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["ferroelectrics", "md", "workflow"]
authors = [
    {name = "Denan LI", email = "lidenan@westlake.edu.cn"}
]
dependencies = [
    "ase",
    "pymatgen",
    "matplotlib",
    "seaborn",
    "numpy",
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
homepage = "https://github.com/MoseyQAQ/FerroDispCalc"
repository = "https://github.com/MoseyQAQ/FerroDispCalc"

[tool.setuptools.packages.find]
where = ["src"]